Update button styles and correct project descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <!-- Proyecto Cine -->
             <article>
                 <h3 class="text-2xl font-semibold text-yellow-800 dark:text-yellow-200 mb-2">Sistema Cine (Frontend y
-                    API)</h3>
+                    Backend)</h3>
                 <p class="text-lg mb-4 text-pretty">
                     Proyecto desarrollado para la gestión de un sistema de cine, con funcionalidades como visualización
                     de películas y horarios.
@@ -223,8 +223,8 @@
                         alt="Docker">
                 </div>
                 <footer class="flex gap-x-4 items-end justify-start mt-4">
-                    <a href="https://github.com/GabriLPDA22/Cine-front" class="button-link">Ver frontend</a>
-                    <a href="https://github.com/GabriLPDA22/Cine-Back" class="button-link">Ver API</a>
+                    <a href="https://github.com/GabriLPDA22/Cine-front" class="button-styled">Ver frontend</a>
+                    <a href="https://github.com/GabriLPDA22/Cine-Back" class="button-styled">Ver backend</a>
                 </footer>
             </article>
 
@@ -254,8 +254,8 @@
                         alt="Java">
                 </div>
                 <footer class="flex gap-x-4 items-end justify-start mt-4">
-                    <a href="https://github.com/GabriLPDA22/BurgerVibesFront" class="button-link">Ver frontend</a>
-                    <a href="https://github.com/GabriLPDA22/BurgerVibesBack" class="button-link">Ver backend</a>
+                    <a href="https://github.com/GabriLPDA22/BurgerVibesFront" class="button-styled">Ver frontend</a>
+                    <a href="https://github.com/GabriLPDA22/BurgerVibesBack" class="button-styled">Ver backend</a>
                 </footer>
             </article>
 
@@ -280,7 +280,7 @@
                         alt="JavaScript">
                 </div>
                 <footer class="flex gap-x-4 items-end justify-start mt-4">
-                    <a href="https://github.com/GabriLPDA22/CoreEvo" class="button-link">Ver proyecto</a>
+                    <a href="https://github.com/GabriLPDA22/CoreEvo" class="button-styled">Ver proyecto</a>
                 </footer>
             </article>
 
