Update LinkedIn profile link in index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="text-center lg:text-left">
                 <h1 class="text-gray-900 dark:text-white text-3xl md:text-4xl lg:text-5xl font-bold pb-6 lg:pb-10">
                     Hola, soy Gabriel
-                    <a href="https://linkedin.com/in/midudev" target="_blank" rel="noopener"
+                    <a href="https://www.linkedin.com/in/gabriel-saiz-de-la-maza-bajo-140370184/" target="_blank" rel="noopener"
                         class="inline-flex justify-center items-center hover:scale-105 transition">
                         <div>
                             <span class="relative flex overflow-hidden rounded-full p-[1px]">
