Add id attribute to contacto div in index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
 
             <!-- Contenedor para el texto -->
-            <div class="text-center lg:text-left">
+            <div id="contacto" class="text-center lg:text-left">
                 <h1 class="text-gray-900 dark:text-white text-3xl md:text-4xl lg:text-5xl font-bold pb-6 lg:pb-10">
                     Hola, soy Gabriel
                     <a href="https://www.linkedin.com/in/gabriel-saiz-de-la-maza-bajo-140370184/" target="_blank" rel="noopener"
