Refactor HTML structure and add Twig badge in index.html

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <div id="contacto" class="text-center lg:text-left">
                 <h1 class="text-gray-900 dark:text-white text-3xl md:text-4xl lg:text-5xl font-bold pb-6 lg:pb-10">
                     Hola, soy Gabriel
-                    <a href="https://www.linkedin.com/in/gabriel-saiz-de-la-maza-bajo-140370184/" target="_blank" rel="noopener"
-                        class="inline-flex justify-center items-center hover:scale-105 transition">
+                    <a href="https://www.linkedin.com/in/gabriel-saiz-de-la-maza-bajo-140370184/" target="_blank"
+                        rel="noopener" class="inline-flex justify-center items-center hover:scale-105 transition">
                         <div>
                             <span class="relative flex overflow-hidden rounded-full p-[1px]">
                                 <span
@@ -391,6 +391,8 @@
                     alt="JavaScript" class="tech-icon">
                 <img src="https://img.shields.io/badge/HTML-%23E34F26.svg?style=for-the-badge&logo=html5&logoColor=white"
                     alt="HTML" class="tech-icon">
+                <img src="https://img.shields.io/badge/Twig-%2361DAFB.svg?style=for-the-badge&logo=twig&logoColor=black"
+                    alt="HTML.Twig" class="tech-icon">
                 <img src="https://img.shields.io/badge/CSS-%231572B6.svg?style=for-the-badge&logo=css3&logoColor=white"
                     alt="CSS" class="tech-icon">
                 <img src="https://img.shields.io/badge/Symfony-%23000000.svg?style=for-the-badge&logo=symfony&logoColor=white"
@@ -426,7 +428,8 @@
         <div class="max-w-screen-xl mx-auto flex flex-col md:flex-row items-center justify-between px-6">
             <!-- Información de copyright -->
             <span class="text-sm text-yellow-500 text-center md:text-left mb-4 md:mb-0">
-                © 2024 <a href="#" class="hover:underline font-semibold">Gabriel Saiz</a>. Casi todos los derechos reservados.
+                © 2024 <a href="#" class="hover:underline font-semibold">Gabriel Saiz</a>. Casi todos los derechos
+                reservados.
             </span>
             <!-- Navegación -->
             <ul class="flex gap-6 text-sm font-medium">
@@ -435,7 +438,7 @@
             </ul>
         </div>
     </footer>
-    
+
 
 </body>
 
