Inicia de Google analytics

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <meta name="description"
         content="Portafolio de Gabriel Saiz, estudiante de Desarrollo de Aplicaciones Web (DAW). Desarrollador Web especializado en crear aplicaciones modernas y soluciones web." />
     <link rel="icon" type="image/svg+xml" href="/img/favicon.svg" />
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CEDV9NP2WJ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-CEDV9NP2WJ');
+    </script>
+    
     <!-- Añade esto justo antes de cerrar el head -->
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Portafolio - Gabriel Saiz Estudiante de DAW</title>
@@ -23,8 +33,8 @@
     <meta property="og:description"
         content="Desarrollador Web y Estudiante de DAW especializado en crear aplicaciones modernas y soluciones web." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://tu-dominio.com" />
-    <meta property="og:image" content="https://tu-dominio.com/img/og-image.jpg" />
+    <meta property="og:url" content="https://gabrielcodes.dev" />
+    <meta property="og:image" content="https://gabrielcodes.dev/img/og-image.jpg" />
 
     <!-- Tema de color -->
     <meta name="theme-color" content="#0f172a" media="(prefers-color-scheme: dark)" />
